--- a/views/home.pug
+++ b/views/home.pug
@@ -35,4 +35,14 @@ header
     a.suptext Кузовной ремонт
     a.suptext Ремонт ходовой части
   .supcon-2
+    .con-con
+      img.font(src='.png') a.text-con-con
+    .con-con
+      img.font(src='.png') a.text-con-con
+    .con-con
+      img.font(src='.png') a.text-con-con
+    .con-con
+      img.font(src='.png') a.text-con-con 
+      
+
          
